WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80094
WorkerContext shouldn't know about IndexedDB
https://bugs.webkit.org/show_bug.cgi?id=80094
Summary
WorkerContext shouldn't know about IndexedDB
Adam Barth
Reported
2012-03-01 21:56:23 PST
WorkerContext shouldn't know about IndexedDB
Attachments
Patch
(27.94 KB, patch)
2012-03-01 21:58 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-03-01 21:58:34 PST
Created
attachment 129809
[details]
Patch
Kentaro Hara
Comment 2
2012-03-01 22:07:22 PST
Comment on
attachment 129809
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=129809&action=review
Wonderful cleanup!
> Source/WebCore/ChangeLog:14 > + files were missing from various build systems, so I added them. I > + suspect that means IndexedDB is only enabled by default on Chromium.
Yes, I think so.
WebKit Review Bot
Comment 3
2012-03-02 04:46:08 PST
Comment on
attachment 129809
[details]
Patch Clearing flags on attachment: 129809 Committed
r109556
: <
http://trac.webkit.org/changeset/109556
>
WebKit Review Bot
Comment 4
2012-03-02 04:46:13 PST
All reviewed patches have been landed. Closing bug.
Mark Pilgrim (Google)
Comment 5
2012-03-16 08:15:53 PDT
***
Bug 79508
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug