WorkerContext shouldn't know about IndexedDB https://bugs.webkit.org/show_bug.cgi?id=80094

Reviewed by Kentaro Hara.

There are still a couple IndexedDB stragglers we should clean up in
WebCore proper.  This patch moves some IndexedDB logic from
WorkerContext into the indexeddb module.

In the process of writing this patch, I noticed that some IndexedDB
files were missing from various build systems, so I added them.  I
suspect that means IndexedDB is only enabled by default on Chromium.

* CMakeLists.txt:
* DerivedSources.make:
* DerivedSources.pri:
* GNUmakefile.list.am:
* Modules/indexeddb/WorkerContextIndexedDatabase.cpp: Added.
(WebCore):
(WebCore::WorkerContextIndexedDatabase::WorkerContextIndexedDatabase):
(WebCore::WorkerContextIndexedDatabase::~WorkerContextIndexedDatabase):
(WebCore::WorkerContextIndexedDatabase::from):
(WebCore::WorkerContextIndexedDatabase::webkitIndexedDB):
* Modules/indexeddb/WorkerContextIndexedDatabase.h: Added.
(WebCore):
(WorkerContextIndexedDatabase):
* Modules/indexeddb/WorkerContextIndexedDatabase.idl: Added.
* Target.pri:
* WebCore.gypi:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* workers/WorkerContext.cpp:
(WebCore):
* workers/WorkerContext.h:
(WebCore):
(WorkerContext):
* workers/WorkerContext.idl:


Canonical link: https://commits.webkit.org/97232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109556 268f45cc-cd09-0410-ab3c-d52691b4dbfc