Source/WebCore/workers/WorkerContext.cpp
@@ -69,7 +69,6 @@
 #endif
 
 #include "ExceptionCode.h"
-#include "IDBFactory.h"
 
 namespace WebCore {
 
@@ -406,19 +405,6 @@ void WorkerContext::notifyObserversOfStop()
         iter = m_workerObservers.begin();
     }
 }
-
-#if ENABLE(INDEXED_DATABASE)
-IDBFactory* WorkerContext::webkitIndexedDB() const
-{
-    if (!securityOrigin()->canAccessDatabase())
-        return 0;
-    if (!m_idbFactoryBackendInterface)
-        m_idbFactoryBackendInterface = IDBFactoryBackendInterface::create();
-    if (!m_idbFactory)
-        m_idbFactory = IDBFactory::create(m_idbFactoryBackendInterface.get());
-    return m_idbFactory.get();
-}
-#endif
 
 WorkerEventQueue* WorkerContext::eventQueue() const
 {
